objects/LLC_Q__c.object
<CustomObject>
    <description>LLC Questionnaire for Client to fill out</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>LLC_Q_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_holding__c</fullName>
        <label>Address of Entity holding assignment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_property__c</fullName>
        <label>Address of Property being Transferred</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_LLC_name_choice__c</fullName>
        <label>Alternate name choice</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_of_the_Corp_officers_on_disability__c</fullName>
        <label>Any of the Corp officers on disability?</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_going_to_be_using_Anderson_s_Nev__c</fullName>
        <label>Are you going to be using Anderson&apos;s Nev</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_an_interest_in_a_Land_Trust__c</fullName>
        <label>Assigned an interest in a Land Trust?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_intrest__c</fullName>
        <label>Assigning the Beneficiary Intrest?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Purpose__c</fullName>
        <label>Business Purpose</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Account_Number__c</fullName>
        <label>Client Account Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <label>Date Created</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deed_Holder_Name__c</fullName>
        <label>Deed Holder Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deed_Spouses_Name__c</fullName>
        <label>Spouses name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directors_Five__c</fullName>
        <label>Directors Five</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directors_Four__c</fullName>
        <label>Directors Four</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directors_One__c</fullName>
        <label>Directors One</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directors_Three__c</fullName>
        <label>Directors Three</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directors_Two__c</fullName>
        <label>Directors Two</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_want_Anonymity_for_this_LLC__c</fullName>
        <label>Do you want Anonymity for this LLC?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Online Q&apos;s</relationshipLabel>
        <relationshipName>Online_Q_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_assignment__c</fullName>
        <label>Name of Entity holding assignment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Number_of_Employees__c</fullName>
        <label>Expected Number of Employees?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Fee__c</fullName>
        <description>Filing fee for the state selected</description>
        <label>Filing Fee</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_State__c</fullName>
        <label>Filing State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Address__c</fullName>
        <label>First Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_M__c</fullName>
        <label>First Member Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Member_Ownership__c</fullName>
        <label>First Member Ownership %</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Shareholder_State__c</fullName>
        <label>First Shareholder State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Shareholder__c</fullName>
        <label>First Shareholder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Address__c</fullName>
        <label>Fourth Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fourth_Deed_Holder_Name__c</fullName>
        <label>Fourth Deed Holder Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Member_Name__c</fullName>
        <label>Fourth Member Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Member_Ownership__c</fullName>
        <label>Fourth Member Ownership %</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Member_SSN_EIN__c</fullName>
        <label>Fourth Member SSN/EIN</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Shareholder_Percent__c</fullName>
        <label>Fourth Shareholder %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fourth_Shareholder_State__c</fullName>
        <label>Fourth Shareholder State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fourth_Shareholder__c</fullName>
        <label>Fourth Shareholder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_State_of_Residence_or_Formation__c</fullName>
        <label>Fourth State of Residence or Formation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_Members_will_the_LLC_have__c</fullName>
        <label>How many Members will the LLC have?</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_to_Serve__c</fullName>
        <label>How to Serve</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Trustee__c</fullName>
        <label>Initial Trustee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_LLC_for_a_professional_service__c</fullName>
        <label>Is this LLC for a professional service?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Business_Address__c</fullName>
        <description>What is the LLC&apos;s Business Address? (List pysical address-do not enter P.O. Box.)</description>
        <label>LLC Business Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Business_City__c</fullName>
        <label>LLC Business City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Business_State__c</fullName>
        <label>LLC Business State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Business_Zip__c</fullName>
        <label>LLC Business Zip</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Mailing_Address__c</fullName>
        <label>LLC Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Mailing_City__c</fullName>
        <label>LLC Mailing City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Mailing_State__c</fullName>
        <label>LLC Mailing State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Mailing_Zip__c</fullName>
        <label>LLC Mailing Zip</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Name_first_choice__c</fullName>
        <label>Name first choice</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Tax_Status__c</fullName>
        <label>LLC Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disregarded</fullName>
                </value>
                <value>
                    <fullName>C-Corporation</fullName>
                </value>
                <value>
                    <fullName>S-Corporation</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_s_Principle_Purpose__c</fullName>
        <label>LLC&apos;s Principle Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rental Real Estate</fullName>
                </value>
                <value>
                    <fullName>Flipping Real Estate</fullName>
                </value>
                <value>
                    <fullName>Brokerage Accounts Savings</fullName>
                </value>
                <value>
                    <fullName>Holding LLC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/detail/&quot;+ Id</formula>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_person_on_disability_exp_payments__c</fullName>
        <label>List person on disability &amp; exp payments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manager_1__c</fullName>
        <label>Manager 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_2__c</fullName>
        <label>Manager 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_3__c</fullName>
        <label>Manager 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you Married?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Client Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Sole_member_entity_of_LLC__c</fullName>
        <label>Name of the Sole member entity of LLC?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nevada_or_Wyoming_Entity_with_Nexus__c</fullName>
        <label>Nevada or Wyoming Entity with Nexus?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_State__c</fullName>
        <label>Organization State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Submitted_by__c</fullName>
        <label>Original Submission</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>President__c</fullName>
        <label>President</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_the_LLC__c</fullName>
        <label>Purpose of the LLC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Queue_Run__c</fullName>
        <description>The Date/Time of the last entity creation from the flow.</description>
        <inlineHelpText>Displays the date/time of the last time the create entity flow was run.</inlineHelpText>
        <label>Queue Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reps_entity__c</fullName>
        <label>LLC Manager, Corp Officer or other Reps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSN_EIN__c</fullName>
        <label>SSN/EIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Address__c</fullName>
        <label>Second Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Deed_Holder_Name__c</fullName>
        <label>Second Deed Holder Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_How_to_Serve__c</fullName>
        <label>Second How to Serve</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Member_Name__c</fullName>
        <label>Second Member Name</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Member_Ownership__c</fullName>
        <label>Second Member Ownership %</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Member_SSN_EIN__c</fullName>
        <label>Second Member SSN/EIN</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Shareholder_Percent__c</fullName>
        <label>Second Shareholder %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Second_Shareholder_State__c</fullName>
        <label>Second Shareholder State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Shareholder__c</fullName>
        <label>Second Shareholder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_State_of_Residence_or_Formation__c</fullName>
        <label>Second State of Residence or Formation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Successor_Citizenship__c</fullName>
        <label>Second Successor is a US Citizen?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Successor_Gender__c</fullName>
        <label>Second Successor Gender</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Successor_Trustee__c</fullName>
        <label>Second Successor Trustee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secretary__c</fullName>
        <label>Secretary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shareholder__c</fullName>
        <label>Shareholder %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_of_Residence_or_Formation__c</fullName>
        <label>State of Residence or Formation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Not Using</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Successor_Citizenship__c</fullName>
        <label>Successor is a US Citizen?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successor_Gender__c</fullName>
        <label>Successor Gender</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successor_Trustee__c</fullName>
        <label>Successor Trustee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Year_End_Date__c</fullName>
        <label>Tax Year End Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>The_Manager_is_a_n__c</fullName>
        <label>The Manager is a(n)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Address__c</fullName>
        <label>Third Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Deed_Holder_Name__c</fullName>
        <label>Third Deed Holder Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_How_to_Serve__c</fullName>
        <label>Third How to Serve</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Member_Name__c</fullName>
        <label>Third Member Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Member_Ownership__c</fullName>
        <label>Third Member Ownership %</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Member_SSN_EIN__c</fullName>
        <label>Third Member SSN/EIN</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Shareholder_Percent__c</fullName>
        <label>Third Shareholder %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Shareholder_State__c</fullName>
        <label>Third Shareholder State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Shareholder__c</fullName>
        <label>Third Shareholder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_State_of_Residence_or_Formation__c</fullName>
        <label>Third State of Residence or Formation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Successor_Citizenship__c</fullName>
        <label>Third Successor is a US Citizen?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Successor_Gender__c</fullName>
        <label>Third Successor Gender</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Successor_Trustee__c</fullName>
        <label>Third Successor Trustee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treasurer__c</fullName>
        <label>Treasurer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Citizen?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uploaded_Land_Trust_Documents__c</fullName>
        <description>Documents uploaded from formstack to Salesforce</description>
        <inlineHelpText>If Documents have been uploaded to the form they will show up here</inlineHelpText>
        <label>Uploaded Land Trust Documents</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Use_Anderson_Trustee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Anderson as Trustee ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vice_President__c</fullName>
        <label>Vice-President</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_state_was_it_formed_in__c</fullName>
        <label>What state was it formed in ?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_type_of_professional_service__c</fullName>
        <label>What type of professional service?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_this_LLC_be_Manager_Managed_or_Memb__c</fullName>
        <label>Manager Managed or Member Managed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manager-Managed</fullName>
                </value>
                <value>
                    <fullName>Member-Managed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_this_LLC_be_assigned_an_interest_in__c</fullName>
        <label>Will this LLC be assigned an interest in</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_this_be_a_Joint_Venture_LLC__c</fullName>
        <label>Will this be a Joint Venture LLC?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_End_Date__c</fullName>
        <label>Year End Date Selected</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Online Q&apos;s</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Online_Q_View</fullName>
        <columns>NAME</columns>
        <columns>Queue_Run__c</columns>
        <columns>Deed_Spouses_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Online Q View</label>
    </listViews>
    <nameField>
        <label>Online Q Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Online Q&apos;s</pluralLabel>
    <recordTypes>
        <fullName>C_Corporation</fullName>
        <active>true</active>
        <label>C-Corporation</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC</fullName>
        <active>true</active>
        <description>LLC</description>
        <label>LLC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Land_Trust</fullName>
        <active>true</active>
        <label>Land Trust</label>
    </recordTypes>
    <recordTypes>
        <fullName>S_Corporation</fullName>
        <active>true</active>
        <description>Used with S-Corporations</description>
        <label>S-Corporation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>